# simstock_paper_results

./: README.md  imputation.ipynb  post_processing.ipynb  processing_script.py  pyproject.toml  sims.ipynb
data/: _select_b_scu_id_a_mean_object_height_cm_0_01_as_mean_hgt_m_a_es_202310241411.csv  cluster_guide.csv  clustered.csv  domtest.csv  nondomtest.csv  preprocessed_croydon.csv  processed_croydon.csv  simstock_v2_pt2_selection_202203170624.csv  unclustered_df.csv
data/settings/: DB-Fabric-CONSTRUCTION.csv  DB-HeatingCooling-OnOff.csv  DB-Loads-ELECTRICEQUIPMENT.csv  DB-Loads-LIGHTS.csv  DB-Loads-PEOPLE.csv  DB-Schedules-SCHEDULE_COMPACT.csv  cluster_guide.numbers  clustered.numbers
datamethods/: domestic.py  plotting.py  results_processing.py
