[tool.poetry]
name = "simstock-paper"
version = "0.1.0"
description = "Notebook for the simstock paper"
authors = ["Oliver Smith, Virginia Gori"]
readme = "README.md"
packages = [{include = "simstock_paper"}]

[tool.poetry.dependencies]
python = ">=3.9,<=3.11.3"
pandas = "^1.5.3"
matplotlib = "^3.7.3"
geopandas = ">=0.13.2,<0.14.0"
folium = "^0.14.0"
shapely = "^2.0.1"
scipy = "^1.11.2"
simstock = "^0.2.0"
scikit-learn = "^1.3.2"
kmodes = "^0.12.2"
gower = "^0.1.2"
seaborn = "^0.13.0"
mplleaflet = "^0.0.5"
contextily = "^1.4.0"
cartopy = "^0.22.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
